# uniffi-rs

./: CHANGELOG.md  Cargo.toml
docs/: handles.md  release-process.md  uniffi-versioning.md
docs/adr/: 0009-handles.md  0009-remote-types-interfaces-and-proc-macros.md  0010-remote-interface-extensions.md
examples/app/typical/app/: Cargo.toml
examples/app/typical/app/src/: lib.rs
examples/callbacks/src/: callbacks.udl  lib.rs
examples/callbacks/tests/: test_generated_bindings.rs
examples/rondpoint/src/: lib.rs  rondpoint.udl
examples/traits/src/: traits.udl
fixtures/benchmarks/: Cargo.toml
fixtures/error-types/: Cargo.toml  README.md
fixtures/ext-types/: README.md
fixtures/ext-types/lib/: Cargo.toml  build.rs  uniffi.toml
fixtures/ext-types/lib/src/: lib.rs  lib.udl
fixtures/ext-types/lib/tests/: test_generated_bindings.rs
fixtures/ext-types/lib/tests/bindings/: test_ext_types.kts  test_external_types.py  test_imported_types.kts  test_imported_types.py
tools/: make_old_docs_symlinks.py
uniffi/: Cargo.toml
uniffi/src/: lib.rs  testing.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs  scaffolding.rs
uniffi_build/: Cargo.toml
uniffi_checksum_derive/: Cargo.toml
uniffi_core/: Cargo.toml
uniffi_macros/: Cargo.toml
uniffi_macros/src/: enum_.rs  error.rs  export.rs  fnsig.rs  lib.rs  setup_scaffolding.rs  util.rs
uniffi_meta/: Cargo.toml
uniffi_meta/src/: group.rs  lib.rs  reader.rs
uniffi_testing/: Cargo.toml
uniffi_udl/: Cargo.toml
uniffi_udl/src/: attributes.rs  finder.rs
weedle2/: Cargo.toml
(+114 files in other folders)
