[package]
name = "ext-types-lib"
edition = "2018"
version = "0.11.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "uniffi_ext_types_lib"

[dependencies]
anyhow = "1"
bytes = "1.0"
serde_json = "1"
uniffi_macros = {path = "../../../uniffi_macros"}
uniffi = {path = "../../../uniffi", features=["builtin-bindgen"]}
ext-types-guid = {path = "../guid"}
ext-types-json = {path = "../json"}

[build-dependencies]
uniffi_build = {path = "../../../uniffi_build", features=["builtin-bindgen"]}
